REGRESSION(223307): ASSERTION in WebCore::ResourceLoadObserver::logUserInteractionWithReducedTimeResolution https://bugs.webkit.org/show_bug.cgi?id=178342 <rdar://problem/35008505>

Reviewed by Chris Dumez.

In r223307 I mistakenly used 'topDocument->topDocument()' because of a copy/paste error. I should have just used
'topDocument'.

Tests: CommandBackForwardTestWKWebView in TestWebKitAPI.

* loader/ResourceLoadObserver.cpp:
(WebCore::ResourceLoadObserver::logUserInteractionWithReducedTimeResolution): We might enter this routine at a time
where there is no page. If so, we should return early and not log credit.
* page/EventHandler.cpp:
(WebCore::EventHandler::keyEvent): Correct the argument passed to the log function.


Canonical link: https://commits.webkit.org/194563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223418 268f45cc-cd09-0410-ab3c-d52691b4dbfc